--- a/ex05/ex05_report.tex
+++ b/ex05/ex05_report.tex
@@ -29,56 +29,73 @@
 \noindent\parbox{\linewidth}{
  \parbox{.25\linewidth}{ \large ICP, Exercise 05 }\hfill
  \parbox{.5\linewidth}{\begin{center} \large Beat Hubmann \end{center}}\hfill
- \parbox{.2\linewidth}{\begin{flushright} \large Oct 28, 2018 \end{flushright}}
+ \parbox{.2\linewidth}{\begin{flushright} \large Oct 27, 2018 \end{flushright}}
 }
 \noindent\rule{\linewidth}{2pt}
 
 
 \section{Introduction}
 
-To measure the fractal dimension of the percolating cluster in a square site lattice, both the Sandbox Algorithm and the Box Counting algorithm as described in~\cite{herrmann} were implemented. The largerst cluster found by the Hoshen-Kopelman algorithm~\cite{hoshen} was used as percolating cluster.
+A Monte Carlo method to approximate the high-dimensional conditioned integration to calculate the average distance
+between the centers of hard spheres in a box was implemented and examined for convergence.
 
 \section{Algorithm Description}
-The Hoshen-Kopelman algorithm implementation was taken over from the previously submitted exercise 03.\\
-Both the Sandbox and the Box Counting algorithm were implemented as described in the course lecture notes~\cite{herrmann}.\\
-For the box counting method, the choice was made to double the cell size at each step until reaching the lattice size $L$, i.e. $\epsilon \in \{1, 2, 4, 8, \ldots, L\}$.
+To calculate the average sphere center distance as in equation~\ref{eqn:1}, the Monte Carlo approximation as in equation~\ref{eqn:2}
+is calculated. The algorithm was implemented as in the written task description except for one change: Based on instructor suggestion,
+a new configuration is generated in one go: $ n \cdot \text{\# dim} $ random numbers are generated in a contiguous batch and the resulting
+configuration only then gets checked for validity. If an overlap between spheres is found, the complete configuration is thrown away and
+ a new one is generated with a different random number generator seed. This is repeated until a valid configuration is found or 
+ a treshold of attempts is reached. \\
+
+\begin{equation}
+<d_{mean}> = \frac{1}{Z} \int d_{mean} \, d^3 r_1 \ldots d^3 r_n, \qquad Z = \int d^3 r_1 \ldots d^3 r_n
+\label{eqn:1}	
+\end{equation}
+
+
+\begin{equation}
+<d_{mean}> \backsimeq \frac{1}{M} \sum_{k=1}^{M} d_{mean}^k
+\label{eqn:2}	
+\end{equation}
+
+ The overall algorithm description thus is: \\
+ \begin{itemize}
+
+ \item Generate configuration $k$ with $n$ sphere centers in a batch
+ \item Check configuration validity; repeat if invalid, abort if repetition treshold reached and no valid configuration
+ \item Calculate $d_{mean}^k$ for generated configuration
+ \item Repeat until $M$ configurations generated to calculate $<d_{mean}> = \frac{1}{M}\sum_{k=1}^{M}d_{mean}^k$
+
+
+
+\end{itemize}
 
 \section{Results}
 
 
 The program was implemented as described above and submitted with this report. 
-A square site lattice of side length $L=1024$ and occupation probabilities $p \in \{0.58, p_c=0.592746, 0.61\}$ were used.
-As in the previous exercise, \texttt{C++}'s Mersenne Twister \texttt{mt19937} was used to initialize the lattices.
-
-\subsection{Experiment 1: Sandbox Algorithm}
-The box masses $M(R)$ where $M$ equals the numbers of sites occcupied by the largest (i.e. percolating) cluster at occupation probability $p$ in a box of increasing side length $R$ on a site lattice with side length $L=1024$, were recorded for $R \in \{3, 4, \cdots, L\}$. The results were plotted as $\log(M(R))$ versus $\log(R)$ as shown in figure~\ref{fig:1}.
-
+For a three-dimensional box with edge length $L=1$ and a sphere radius fixed at $R = 0.01$, experiments were run for $n \in \{2, 4, 8, 16, 32\}$ over ensemble
+sizes $M \in \{1, 2, 4, 8, \ldots, 2^{20}\}$. For all experiments, the spheres were allowed to sit on the edges (in thus in extremis in the corners)
+of the box (i.e. not all spheres were necessarily completely inside the box). While this has no relevance for the objective of the experiment
+as such and can be easily compensated by adjusting $L$, it has an effect on the volume fraction $\nu$ discussed at the end.
+The obtained data are all reflected by figure~\ref{fig:1}.
 
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[scale=0.9]{figure1.eps} 
 \end{center}
-\caption{Sandbox Algorithm Results for $p \in \{0.58, p_c, 0.61\}$.}
+\caption{Convergence of $<d_{mean}>$ for different numbers of spheres $n$ and ensemble sizes $M$ (constant sphere radius $R=0.01$, constant box side length $L=1.0$).}
 \label{fig:1}
 \end{figure}
 
 
-\subsection{Experiment 2: Box Counting Algorithm}
-The number of non-empty grid cells $N(\epsilon)$ where $\epsilon$ is the grid constant were recorded for $L=1024$ and $\epsilon \in \{1, 2, 4, 8, \ldots, L\}$ as described above. The results were plotted as $\log(N(\epsilon))$ versus $\log(\frac{1}{\epsilon})$ as shown in figure~\ref{fig:2}.
-
-
-
-\begin{figure}[ht]
-\begin{center}
-\includegraphics[scale=0.9]{figure2.eps} 
-\end{center}
-\caption{Box Counting Algorithm Results for $p \in \{0.58, p_c, 0.61\}$.}
-\label{fig:2}
-\end{figure}
-
 \section{Discussion}
-The slope of 1.88 of the line for $p=p_c$ in figure~\ref{fig:1} obtained from the Sandbox algorithm is well in line with the theoretical value of $d_f=\frac{91}{48} \approx 1.89$ for a 2D lattice and thus as expected.
-For some reason reason, \texttt{gnuplot} couldn't be brought to fit a slope to the line for $p=p_c$ in figure~\ref{fig:2} obtained from the Box Counting algorithm. However, a visual inspection reveals that the slope is just a tad under 2 and thus in line with both the sandbox algorithm results and theoretical expectations. 
+As one would expect, it is evident that configurations with larger amounts of spheres $n$ converge quicker in the sense of ensemble size $M$ than configurations
+with a low amount of spheres. This is because a higher $n$ "encourages" a uniform distribution of spheres in the box.
+Also as expected, no matter what the number of spheres, all configurations eventually converge to the same value for $d_{mean}$ as the ensemble size $M$ increases.
+Interestingly, the chosen approach of generating a complete configuration in a batch enforced rather low volume fractions $\nu$: Even when allowing for 
+$10^6$ attempts to generate a valid configuration, values of $n \gtrapprox 60$ at a sphere radius of $R = 0.01$ often resulted in aborts for a lot (but not all)
+initial seeds. Therefore, experiments were adjusted to keep $\nu \lessapprox 60 \cdot \frac{4}{3}\pi \frac{R^3}{L^3} \approx 2.5 \cdot 10^{-4}$.
 
 \begin{thebibliography}{99}
 
@@ -90,15 +107,7 @@ For some reason reason, \texttt{gnuplot} couldn't be brought to fit a slope to t
 	\emph{Introduction to Computational Physics - Lecture Notes},\\
 	ETH Zurich,\\
 	2017.
-	
-\bibitem{hoshen}
-	Hoshen, J.,
-	Kopelman, R.,\\
-	\emph{Percolation and cluster distribution. I. Cluster multiple labeling technique and critical concentration algorithm},\\
-	Phys. Rev. B 14, 3428,\\
-	1976.
 
 \end{thebibliography}
-
 
 \end{document}
